--- a/services/user-service/dockerfile
+++ b/services/user-service/dockerfile
@@ -3,7 +3,7 @@ FROM node:20
 # Set the working directory inside the container
 WORKDIR /usr/src/app
 
-RUN npm install -g @nestjs/cli
+# RUN npm install -g @nestjs/cli
 # Copy package.json and package-lock.json to the working directory
 COPY package*.json ./
 
@@ -15,9 +15,10 @@ COPY . .
 
 # Build the NestJS application
 # RUN npm run build
+RUN npm run build
 
 # Expose the application port
 EXPOSE 3001
 
 # Command to run the application
-CMD ["npm", "run", "start:dev"]
+CMD ["node", "dist/main.js"]
