--- a/nginx/conf.d/default.conf
+++ b/nginx/conf.d/default.conf
@@ -1,15 +1,36 @@
 upstream user_service {
-    # Docker Compose service name and port
     server user-service:3001;
+}
+
+upstream product_catalog_service {
+    server product-catalog-service:3002;
+}
+
+upstream shopping_cart_service {
+    server shopping-cart-service:3003;
+}
+
+upstream order_service {
+    server order-service:3004;
+}
+
+upstream notification_service {
+    server notification-service:3005;
+}
+
+upstream payment_service {
+    server payment-service:3006;
 }
 
 server {
     listen 80;
     server_name _;
 
-    # Route anything under /users/ to the user-service
-    location / {
-        proxy_pass         http://user_service;
+    location = /user-service {
+        return 301 /user-service/;
+    }
+    location /user-service/ {
+        proxy_pass         http://user_service/;
         proxy_http_version 1.1;
         proxy_set_header   Connection "";
         proxy_set_header   Host              $host;
@@ -19,14 +40,67 @@ server {
         proxy_read_timeout 90s;
     }
 
-    # Optionally, health checks for NGINX itself
+    location /product-catalog-service/ {
+        proxy_pass         http://product_catalog_service/;
+        proxy_http_version 1.1;
+        proxy_set_header   Connection "";
+        proxy_set_header   Host              $host;
+        proxy_set_header   X-Real-IP         $remote_addr;
+        proxy_set_header   X-Forwarded-For   $proxy_add_x_forwarded_for;
+        proxy_set_header   X-Forwarded-Proto $scheme;
+        proxy_read_timeout 90s;
+    }
+
+    location /shopping-cart-service/ {
+        proxy_pass         http://shopping_cart_service/;
+        proxy_http_version 1.1;
+        proxy_set_header   Connection "";
+        proxy_set_header   Host              $host;
+        proxy_set_header   X-Real-IP         $remote_addr;
+        proxy_set_header   X-Forwarded-For   $proxy_add_x_forwarded_for;
+        proxy_set_header   X-Forwarded-Proto $scheme;
+        proxy_read_timeout 90s;
+    }
+
+    location /order-service/ {
+        proxy_pass         http://order_service/;
+        proxy_http_version 1.1;
+        proxy_set_header   Connection "";
+        proxy_set_header   Host              $host;
+        proxy_set_header   X-Real-IP         $remote_addr;
+        proxy_set_header   X-Forwarded-For   $proxy_add_x_forwarded_for;
+        proxy_set_header   X-Forwarded-Proto $scheme;
+        proxy_read_timeout 90s;
+    }
+
+    location /notification-service/ {
+        proxy_pass         http://notification_service/;
+        proxy_http_version 1.1;
+        proxy_set_header   Connection "";
+        proxy_set_header   Host              $host;
+        proxy_set_header   X-Real-IP         $remote_addr;
+        proxy_set_header   X-Forwarded-For   $proxy_add_x_forwarded_for;
+        proxy_set_header   X-Forwarded-Proto $scheme;
+        proxy_read_timeout 90s;
+    }
+
+    location /payment-service/ {
+        proxy_pass         http://payment_service/;
+        proxy_http_version 1.1;
+        proxy_set_header   Connection "";
+        proxy_set_header   Host              $host;
+        proxy_set_header   X-Real-IP         $remote_addr;
+        proxy_set_header   X-Forwarded-For   $proxy_add_x_forwarded_for;
+        proxy_set_header   X-Forwarded-Proto $scheme;
+        proxy_read_timeout 90s;
+    }
+
     location /nginx-health {
         return 200 'OK';
         add_header Content-Type text/plain;
     }
 
-    # # Everything else: 404 Not Found
-    # location / {
-    #     return 404;
-    # }
+    location / {
+        return 404;
+    }
 }
