--- a/services/notification-service/dockerfile
+++ b/services/notification-service/dockerfile
@@ -19,4 +19,4 @@ RUN npm run build
 
 EXPOSE 3001
 
-CMD ["node", "dist/main.js"]
+CMD ["sh", "-c", "npx prisma migrate deploy --schema=src/prisma/schema.prisma && node dist/main.js"]
