--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -37,7 +37,6 @@ jobs:
       - name: Cache node_modules for ${{ matrix.service }}
         uses: actions/cache@v3
         with:
-          # Use format() instead of '+' to build the hashFiles argument
           path: services/${{ matrix.service }}/node_modules
           key: node-modules-${{ matrix.service }}-${{ runner.os }}-${{ hashFiles(format('services/{0}/package-lock.json', matrix.service)) }}
           restore-keys: |
@@ -78,18 +77,13 @@ jobs:
 
       - name: Wait for services to be healthy
         run: |
-          echo "🕵️‍♂️  Starting to poll container health statuses…"
-          # Give containers a few seconds to begin initializing
+          echo "🕵️‍♂️  Polling container health statuses…"
           sleep 5
 
-          # (1) How long total we’re willing to wait (in seconds)
           TIMEOUT=300
-          # (2) How often we poll (in seconds)
           INTERVAL=5
           ELAPSED=0
 
-          # (3) List out all of the service names exactly as they appear
-          #     in your `docker-compose.yml`. Upstream services first.
           SERVICES=(
             "postgres"
             "rabbitmq"
@@ -104,44 +98,19 @@ jobs:
             "kibana"
           )
 
-          # Poll loop
           while true; do
             ALL_HEALTHY=true
 
             for SVC in "${SERVICES[@]}"; do
-              # (a) Get the container ID for this service
               CID=$(docker-compose -f docker-compose.yml ps -q "$SVC")
 
               if [ -z "$CID" ]; then
                 echo "✖ $SVC: container not found yet"
                 ALL_HEALTHY=false
               else
-                # (b) Inspect its Health.Status
                 STATUS=$(docker inspect -f '{{ .State.Health.Status }}' "$CID" 2>/dev/null || echo "no-healthcheck")
 
                 if [ "$STATUS" != "healthy" ]; then
                   echo "✖ $SVC: $STATUS"
                   ALL_HEALTHY=false
                 else
-                  echo "✔ $SVC: healthy"
-                fi
-              fi
-            done
-
-            if $ALL_HEALTHY; then
-              echo "✅ All services are healthy!"
-              break
-            fi
-
-            if [ "$ELAPSED" -ge "$TIMEOUT" ]; then
-              echo "⏰ Timeout of ${TIMEOUT}s reached while waiting for health checks."
-              echo "Current statuses (docker-compose ps):"
-              docker-compose -f docker-compose.yml ps
-              exit 1
-            fi
-
-            sleep $INTERVAL
-            ELAPSED=$((ELAPSED + INTERVAL))
-          done
-
-      - name: Install E2E dependencies
