--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,50 +7,50 @@ on:
     branches: ["*"]
 
 jobs:
-  # ─────────────────────────────────────────────
-  # Job 1: Lint every service in parallel
-  # ─────────────────────────────────────────────
-  lint:
-    name: Lint all services
-    runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        service:
-          - user-service
-          - product-catalog-service
-          - shopping-cart-service
-          - order-service
-          - notification-service
-          - payment-service
-    defaults:
-      run:
-        shell: bash
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
+  # # ─────────────────────────────────────────────
+  # # Job 1: Lint every service in parallel
+  # # ─────────────────────────────────────────────
+  # lint:
+  #   name: Lint all services
+  #   runs-on: ubuntu-latest
+  #   strategy:
+  #     matrix:
+  #       service:
+  #         - user-service
+  #         - product-catalog-service
+  #         - shopping-cart-service
+  #         - order-service
+  #         - notification-service
+  #         - payment-service
+  #   defaults:
+  #     run:
+  #       shell: bash
+  #   steps:
+  #     - name: Checkout repository
+  #       uses: actions/checkout@v4
 
-      - name: Set up Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: "20"
+  #     - name: Set up Node.js
+  #       uses: actions/setup-node@v4
+  #       with:
+  #         node-version: "20"
 
-      - name: Cache node_modules for ${{ matrix.service }}
-        uses: actions/cache@v3
-        with:
-          path: services/${{ matrix.service }}/node_modules
-          key: node-modules-${{ matrix.service }}-${{ runner.os }}-${{ hashFiles(format('services/{0}/package-lock.json', matrix.service)) }}
-          restore-keys: |
-            node-modules-${{ matrix.service }}-${{ runner.os }}-
+  #     - name: Cache node_modules for ${{ matrix.service }}
+  #       uses: actions/cache@v3
+  #       with:
+  #         path: services/${{ matrix.service }}/node_modules
+  #         key: node-modules-${{ matrix.service }}-${{ runner.os }}-${{ hashFiles(format('services/{0}/package-lock.json', matrix.service)) }}
+  #         restore-keys: |
+  #           node-modules-${{ matrix.service }}-${{ runner.os }}-
 
-      - name: Install dependencies for ${{ matrix.service }}
-        working-directory: ./services/${{ matrix.service }}
-        run: |
-          npm ci
+  #     - name: Install dependencies for ${{ matrix.service }}
+  #       working-directory: ./services/${{ matrix.service }}
+  #       run: |
+  #         npm ci
 
-      - name: Run linter for ${{ matrix.service }}
-        working-directory: ./services/${{ matrix.service }}
-        run: |
-          npm run lint
+  #     - name: Run linter for ${{ matrix.service }}
+  #       working-directory: ./services/${{ matrix.service }}
+  #       run: |
+  #         npm run lint
 
   # ─────────────────────────────────────────────
   # Job 2: Build Compose stack and run E2E tests
@@ -58,7 +58,7 @@ jobs:
   e2e-test:
     name: Build Docker Compose & Run E2E Tests
     runs-on: ubuntu-latest
-    needs: lint
+    # needs: lint
     defaults:
       run:
         shell: bash
