--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -151,6 +151,11 @@ jobs:
         run: |
           npm ci
 
+      - name: Generate Prisma client for ${{ matrix.service }}
+        working-directory: ./services/${{ matrix.service }}
+        run: |
+          npx prisma generate --schema=./prisma/schema.prisma
+
       - name: Run E2E test for ${{ matrix.service }}
         working-directory: ./services/${{ matrix.service }}
         run: |
