--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -52,71 +52,88 @@ jobs:
   #       run: |
   #         npm run lint
 
-  # ─────────────────────────────────────────────
-  # Job 2: Build Compose stack and run E2E tests
-  # ─────────────────────────────────────────────
-  # e2e-test:
-  #   name: Build Docker Compose & Run E2E Tests
-  #   runs-on: ubuntu-latest
-  #   # needs: lint
-  #   defaults:
-  #     run:
-  #       shell: bash
-  #   steps:
-  #     - name: Checkout repository
-  #       uses: actions/checkout@v4
+  build-docker-compose:
+    name: Build Docker Compose & Wait for Health
+    runs-on: ubuntu-latest
+    defaults:
+      run:
+        shell: bash
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
 
-  #     - name: Set up Docker Compose
-  #       run: |
-  #         sudo apt-get update
-  #         sudo apt-get install -y docker-compose
+      - name: Set up Docker Compose
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y docker-compose
 
-  #     - name: Build and start all services
-  #       run: |
-  #         docker-compose -f docker-compose.yml up -d --build
+      - name: Build and start all services
+        run: |
+          docker-compose -f docker-compose.yml up -d --build
 
-  #     - name: Wait for services to be healthy
-  #       run: |
-  #         echo "🕵️‍♂️  Polling container health statuses…"
-  #         sleep 5
+      - name: Wait for services to be healthy
+        run: |
+          echo "🕵️‍♂️  Polling container health statuses…"
+          sleep 5
 
-  #         TIMEOUT=300
-  #         INTERVAL=5
-  #         ELAPSED=0
+          TIMEOUT=300
+          INTERVAL=5
+          ELAPSED=0
 
-  #         SERVICES=(
-  #           "postgres"
-  #           "rabbitmq"
-  #           "elasticsearch"
-  #           "user-service"
-  #           "product-catalog-service"
-  #           "shopping-cart-service"
-  #           "order-service"
-  #           "notification-service"
-  #           "payment-service"
-  #           "nginx"
-  #           "kibana"
-  #         )
+          SERVICES=(
+            "postgres"
+            "rabbitmq"
+            "elasticsearch"
+            "user-service"
+            "product-catalog-service"
+            "shopping-cart-service"
+            "order-service"
+            "notification-service"
+            "payment-service"
+            "nginx"
+            "kibana"
+          )
 
-  #         while true; do
-  #           ALL_HEALTHY=true
+          while true; do
+            ALL_HEALTHY=true
 
-  #           for SVC in "${SERVICES[@]}"; do
-  #             CID=$(docker-compose -f docker-compose.yml ps -q "$SVC")
+            for SVC in "${SERVICES[@]}"; do
+              CID=$(docker-compose -f docker-compose.yml ps -q "$SVC")
 
-  #             if [ -z "$CID" ]; then
-  #               echo "✖ $SVC: container not found yet"
-  #               ALL_HEALTHY=false
-  #             else
-  #               STATUS=$(docker inspect -f '{{ .State.Health.Status }}' "$CID" 2>/dev/null || echo "no-healthcheck")
+              if [ -z "$CID" ]; then
+                echo "✖ $SVC: container not found yet"
+                ALL_HEALTHY=false
+              else
+                STATUS=$(docker inspect -f '{{ .State.Health.Status }}' "$CID" 2>/dev/null || echo "no-healthcheck")
 
-  #               if [ "$STATUS" != "healthy" ]; then
-  #                 echo "✖ $SVC: $STATUS"
-  #                 ALL_HEALTHY=false
-  #               else
+                if [ "$STATUS" != "healthy" ]; then
+                  echo "✖ $SVC: $STATUS"
+                  ALL_HEALTHY=false
+                else
+                  echo "✔ $SVC: $STATUS"
+                fi
+              fi
+            done
+
+            if $ALL_HEALTHY; then
+              echo "✅ All services are healthy!"
+              break
+            fi
+
+            ELAPSED=$((ELAPSED+INTERVAL))
+            if [ $ELAPSED -ge $TIMEOUT ]; then
+              echo "❌ Timeout waiting for services to become healthy."
+              docker-compose -f docker-compose.yml ps
+              exit 1
+            fi
+
+            sleep $INTERVAL
+          done
+
   e2e-testing:
     name: E2E Test all services
     runs-on: ubuntu-latest
+    needs: build-docker-compose
     strategy:
       matrix:
         service:
