--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -31,12 +31,17 @@ services:
     networks:
       - ecommerce-net
     restart: always
+    depends_on:
+      elasticsearch:
+        condition: service_healthy
+      postgres:
+        condition: service_healthy
     healthcheck:
       test: ["CMD-SHELL", "curl -f http://localhost:3001/health || exit 1"]
       interval: 10s
       timeout: 5s
       retries: 5
-      start_period: 10s
+      start_period: 30s
 
   product-catalog-service:
     build: ./services/product-catalog-service
@@ -46,6 +51,11 @@ services:
       - "3002:3002"
     networks:
       - ecommerce-net
+    depends_on:
+      postgres:
+        condition: service_healthy
+      elasticsearch:
+        condition: service_healthy
     restart: always
     healthcheck:
       test: ["CMD-SHELL", "curl -f http://localhost:3002/health || exit 1"]
@@ -62,6 +72,11 @@ services:
       - "3003:3003"
     networks:
       - ecommerce-net
+    depends_on:
+      postgres:
+        condition: service_healthy
+      elasticsearch:
+        condition: service_healthy
     restart: always
     healthcheck:
       test: ["CMD-SHELL", "curl -f http://localhost:3003/health || exit 1"]
@@ -82,6 +97,12 @@ services:
     depends_on:
       notification-service:
         condition: service_healthy
+      rabbitmq:
+        condition: service_healthy
+      postgres:
+        condition: service_healthy
+      elasticsearch:
+        condition: service_healthy
     healthcheck:
       test: ["CMD-SHELL", "curl -f http://localhost:3004/health || exit 1"]
       interval: 10s
@@ -98,7 +119,12 @@ services:
     networks:
       - ecommerce-net
     depends_on:
-      - rabbitmq
+      rabbitmq:
+        condition: service_healthy
+      postgres:
+        condition: service_healthy
+      elasticsearch:
+        condition: service_healthy
     restart: always
     healthcheck:
       test: ["CMD-SHELL", "curl -f http://localhost:3005/health || exit 1"]
@@ -115,6 +141,11 @@ services:
       - "3006:3006"
     networks:
       - ecommerce-net
+    depends_on:
+      postgres:
+        condition: service_healthy
+      elasticsearch:
+        condition: service_healthy
     restart: always
     healthcheck:
       test: ["CMD-SHELL", "curl -f http://localhost:3006/health || exit 1"]
@@ -125,10 +156,8 @@ services:
 
   postgres:
     image: postgres:14
-    environment:
-      - POSTGRES_USER=postgres
-      - POSTGRES_PASSWORD=password
-      - POSTGRES_DB=ecommerce_user
+    env_file:
+      - ./postgres/.env
     volumes:
       - pgdata:/var/lib/postgresql/data
       - ./postgres/init.sql:/docker-entrypoint-initdb.d/init.sql:ro
@@ -148,9 +177,10 @@ services:
     ports:
       - "5672:5672"
       - "15672:15672"
-    environment:
-      - RABBITMQ_DEFAULT_USER=guest
-      - RABBITMQ_DEFAULT_PASS=guest
+    env_file:
+      - ./rabbitmq/.env
+    volumes:
+      - rabbitmqdata:/var/lib/rabbitmq
     networks:
       - ecommerce-net
     healthcheck:
@@ -165,8 +195,10 @@ services:
     container_name: elasticsearch
     environment:
       - discovery.type=single-node
-      - xpack.security.enabled=false
+      - xpack.security.enabled=true
       - ES_JAVA_OPTS=-Xms512m -Xmx512m
+    env_file:
+      - ./elasticsearch/.env
     volumes:
       - esdata:/usr/share/elasticsearch/data
     ports:
@@ -177,12 +209,12 @@ services:
       test:
         [
           "CMD-SHELL",
-          "curl -f http://localhost:9200/_cluster/health?wait_for_status=yellow || exit 1",
+          "curl -f -u elastic:$$ELASTIC_PASSWORD http://localhost:9200/_cluster/health?wait_for_status=yellow || exit 1",
         ]
       interval: 15s
       timeout: 10s
       retries: 5
-      start_period: 20s
+      start_period: 30s
 
   kibana:
     image: docker.elastic.co/kibana/kibana:8.5.3
@@ -192,15 +224,23 @@ services:
     ports:
       - "5601:5601"
     environment:
-      - ELASTICSEARCH_HOSTS=http://elasticsearch:9200
+      ELASTICSEARCH_HOSTS: "http://elasticsearch:9200"
+      ELASTICSEARCH_USERNAME: "kibana_system"
+      ELASTICSEARCH_PASSWORD: "3HbUdla7uS=_uuRs0Nar"
+    env_file:
+      - ./elasticsearch/.env
     networks:
       - ecommerce-net
     healthcheck:
-      test: ["CMD-SHELL", "curl -f http://localhost:5601/api/status || exit 1"]
+      test:
+        [
+          "CMD-SHELL",
+          "curl -f -u elastic:$$ELASTIC_PASSWORD http://localhost:5601/api/status || exit 1",
+        ]
       interval: 15s
       timeout: 10s
       retries: 5
-      start_period: 20s
+      start_period: 30s
 
 networks:
   ecommerce-net:
@@ -209,3 +249,4 @@ networks:
 volumes:
   pgdata:
   esdata:
+  rabbitmqdata:
