--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -51,7 +51,8 @@ jobs:
 
   build-docker-compose:
     name: Build Docker Compose & Wait for Health
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-latest\
+    environment: staging
     defaults:
       run:
         shell: bash
@@ -209,6 +210,7 @@ jobs:
   e2e-testing:
     name: E2E Test all services
     runs-on: ubuntu-latest
+    environment: staging
     needs: build-docker-compose
     strategy:
       matrix:
