--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -51,7 +51,7 @@ jobs:
 
   build-docker-compose:
     name: Build Docker Compose & Wait for Health
-    runs-on: ubuntu-latest\
+    runs-on: ubuntu-latest
     defaults:
       run:
         shell: bash
